packages/ui/src/components/editor/panel/ResponsePreview/components/TextItem.module.scss
.text {
  margin: var(--padding-6px) var(--padding-12px);
  word-wrap: break-word;

  > * {
    margin: 0;
    font-size: var(--font-size-13px);
  }

  > * + * {
    margin-top: 0.5em;
  }

  ul,
  ol {
    padding-left: 20px;
  }

  code {
    font-family: monospace;
    font-size: var(--font-size-11px);
    padding: 2px 4px;
    border-radius: 3px;
  }

  pre {
    display: flex;
    overflow: auto;
  }

  &__collapse > span {
    cursor: pointer;
    font-weight: 500;
  }
}

.hidden {
  display: flex;
  align-items: center;
  margin: var(--padding-2px) var(--padding-12px);
  gap: var(--padding-8px);
  padding-right: var(--padding-9px);
  position: relative;

  &:hover {
    color: var(--cwc-text-color);

    & .hidden__line {
      background-color: var(--cwc-border-color) !important;
    }
  }

  &__line {
    flex: 1;
    height: 1px;
    background-color: var(--cwc-border-color-dimmed);
  }

  &__tokens {
    font-size: var(--font-size-12px);
    color: var(--cwc-text-color-dimmed);
  }
}

